// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`converts execution definition to AFM Execution > AFM Execution with definition that has no filter 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with definition that has one attribute with alias and one attribute without localId 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "alias": "alias",
          "displayForm": {
            "identifier": "attribute1",
          },
          "localIdentifier": "a_724874d1_attribute1",
        },
        {
          "displayForm": {
            "identifier": "attribute2",
          },
          "localIdentifier": "a_attribute2",
        },
      ],
    },
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with definition with filters 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "label.account.id.name",
          },
          "localIdentifier": "a_label.account.id.name",
        },
        {
          "displayForm": {
            "identifier": "label.activity.id.subject",
          },
          "localIdentifier": "a_label.activity.id.subject",
        },
      ],
      "filters": [
        {
          "positiveAttributeFilter": {
            "displayForm": {
              "identifier": "label.account.id.name",
            },
            "in": {
              "values": [
                "myAccount",
              ],
            },
          },
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "acugFHNJgsBy",
              },
            },
          },
          "localIdentifier": "m_acugFHNJgsBy",
        },
      ],
    },
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "localId1",
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native grand totals for columns 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "label.activity.id",
          },
          "localIdentifier": "a_label.activity.id",
        },
        {
          "displayForm": {
            "identifier": "label.account.id.name",
          },
          "localIdentifier": "a_label.account.id.name",
        },
        {
          "displayForm": {
            "identifier": "label.owner.department",
          },
          "localIdentifier": "a_label.owner.department",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "acugFHNJgsBy",
              },
            },
          },
          "localIdentifier": "m_acugFHNJgsBy",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "abZgFKGPaGYM",
              },
            },
          },
          "localIdentifier": "m_abZgFKGPaGYM",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [],
          "measureIdentifier": "m_acugFHNJgsBy",
        },
        {
          "attributeIdentifiers": [
            "a_label.account.id.name",
          ],
          "measureIdentifier": "m_acugFHNJgsBy",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.account.id.name",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.account.id.name",
              "measureIdentifier": "m_acugFHNJgsBy",
              "type": "nat",
            },
          ],
        },
        {
          "itemIdentifiers": [
            "a_label.owner.department",
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.owner.department",
              "measureIdentifier": "m_acugFHNJgsBy",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native sub totals for columns 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "label.activity.id",
          },
          "localIdentifier": "a_label.activity.id",
        },
        {
          "displayForm": {
            "identifier": "label.account.id.name",
          },
          "localIdentifier": "a_label.account.id.name",
        },
        {
          "displayForm": {
            "identifier": "label.opportunitysnapshot.forecastcategory",
          },
          "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
        },
        {
          "displayForm": {
            "identifier": "label.owner.department",
          },
          "localIdentifier": "a_label.owner.department",
        },
        {
          "displayForm": {
            "identifier": "label.stage.isactive",
          },
          "localIdentifier": "a_label.stage.isactive",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "acugFHNJgsBy",
              },
            },
          },
          "localIdentifier": "m_acugFHNJgsBy",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "abZgFKGPaGYM",
              },
            },
          },
          "localIdentifier": "m_abZgFKGPaGYM",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [
            "a_label.account.id.name",
          ],
          "measureIdentifier": "m_acugFHNJgsBy",
        },
        {
          "attributeIdentifiers": [
            "a_label.account.id.name",
            "a_label.opportunitysnapshot.forecastcategory",
            "a_label.owner.department",
          ],
          "measureIdentifier": "m_acugFHNJgsBy",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.account.id.name",
            "a_label.opportunitysnapshot.forecastcategory",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.opportunitysnapshot.forecastcategory",
              "measureIdentifier": "m_acugFHNJgsBy",
              "type": "nat",
            },
          ],
        },
        {
          "itemIdentifiers": [
            "a_label.owner.department",
            "a_label.stage.isactive",
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.stage.isactive",
              "measureIdentifier": "m_acugFHNJgsBy",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with dimensions with native totals and attribute is in bucket 1`] = `
{
  "execution": {
    "afm": {
      "attributes": [
        {
          "displayForm": {
            "identifier": "label.activity.id",
          },
          "localIdentifier": "a_label.activity.id",
        },
        {
          "displayForm": {
            "identifier": "label.account.id.name",
          },
          "localIdentifier": "a_label.account.id.name",
        },
      ],
      "measures": [
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "acugFHNJgsBy",
              },
            },
          },
          "localIdentifier": "m_acugFHNJgsBy",
        },
        {
          "definition": {
            "measure": {
              "item": {
                "identifier": "abZgFKGPaGYM",
              },
            },
          },
          "localIdentifier": "m_abZgFKGPaGYM",
        },
      ],
      "nativeTotals": [
        {
          "attributeIdentifiers": [],
          "measureIdentifier": "m_acugFHNJgsBy",
        },
      ],
    },
    "resultSpec": {
      "dimensions": [
        {
          "itemIdentifiers": [
            "a_label.account.id.name",
          ],
        },
        {
          "itemIdentifiers": [
            "measureGroup",
          ],
          "totals": [
            {
              "attributeIdentifier": "a_label.account.id.name",
              "measureIdentifier": "m_acugFHNJgsBy",
              "type": "nat",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with empty definition 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {},
  },
}
`;

exports[`converts execution definition to AFM Execution > AFM Execution with sorts 1`] = `
{
  "execution": {
    "afm": {},
    "resultSpec": {
      "sorts": [
        {
          "attributeSortItem": {
            "attributeIdentifier": "a_label.account.id.name",
            "direction": "asc",
          },
        },
      ],
    },
  },
}
`;

exports[`converts execution definition to AFM Execution > should remove empty negative filters and not cause RAIL-2083 1`] = `
[
  {
    "positiveAttributeFilter": {
      "displayForm": {
        "identifier": "label.product.id.name",
      },
      "in": {
        "values": [],
      },
    },
  },
  {
    "positiveAttributeFilter": {
      "displayForm": {
        "identifier": "label.product.id.name",
      },
      "in": {
        "values": [
          "value 1",
        ],
      },
    },
  },
  {
    "negativeAttributeFilter": {
      "displayForm": {
        "identifier": "label.product.id.name",
      },
      "notIn": {
        "values": [
          "value 2",
        ],
      },
    },
  },
]
`;

exports[`converts execution definition to AFM Execution > throw error with dimensions with native totals but no attribute in bucket 1`] = `[Error: Native total references attribute that is not in any dimension: a_label.account.id.name]`;
